updating and fixing races